k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bandwidth-monitor
  labels:
    name: bandwidth-monitor
